Tidy up Beetle APIs
* Expose the concept of namespace (ns) and multi-cloud infrastructure (mci)
* Update handlers and functions for Beetle APIs
* Add externalDocs to show Tumblebug API docs
